# weather-forecasting-eda-ml

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements-vercel.txt  requirements.txt  run.py  setup.py  vercel.json
api/: index.py
backend/: database.py  main.py  models.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  App.module.css  index.css
frontend/src/components/: AboutSection.jsx  AboutSection.module.css  ExportPanel.jsx  ExportPanel.module.css  ForecastGrid.jsx  ForecastGrid.module.css  QueryHistory.jsx  QueryHistory.module.css  SaveQueryModal.jsx  SaveQueryModal.module.css  SearchBar.jsx  SearchBar.module.css  WeatherCard.jsx  WeatherCard.module.css
frontend/src/services/: api.js
models/: gradio_temperature_model_meta.json  linear_regression_temperature_model.joblib  prophet_temperature_model.joblib
notebooks/: 01_data_cleaning.ipynb  02_eda.ipynb  03_anomaly_analysis.ipynb  04_time_series_forecasting.ipynb  05_ml_models.ipynb  06_advanced_analyses.ipynb  weather-trend-forecasting.ipynb
reports/: ensemble_metrics.csv  forecast_metrics.csv  temperature_model_metrics.csv  weather_forecasting_report.md
src/: __init__.py  eval.py  features.py  modal_deploy.py  pipeline.py  preprocessing.py  train.py  visualize.py
